test/errors/multiple_definitions_accross_modules.dmd
use "multiple_definitions_accross_modules/add"

function add(a, b)
    return a * b

print(add(3, 4))

--- Output
This function is already defined in current module. Generic functions can't be overloaded

1| function add(a, b)
   ^
---